/*
 * $Id: ChangeLog,v 1.2426 2004/02/29 17:09:27 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-01 09:55 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/winprn/tprint.prg
    - Fix declaration of METHOD Prow() & PCol()
        Thanks to Rodrigo Moreno

2004-03-01 00:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/hbzlib/zip.c
    + add feature to unzip files match wild cards.
    + add feature to delete from existing zip, files match wild cards.

    /*
    Examples:

    HB_UNZIPFILE("my.zip",,,,,"*.prg")
    (only unzip files match *.prg skleton)

    HB_UNZIPFILE("my.zip",,,,,{"a*.prg","a*.c"})
    (only unzip files match a*.prg and a*.c skletons)

    HB_ZIPDELETEFILES("my.zip","*.prg")
    (delete from my.zip all files match *.prg skleton)

    HB_ZIPDELETEFILES("my.zip",{"*.prg","*.c"})
    (delete from my.zip all files match *.prg and *.c skletons)
    */

2004-02-29 18:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/hbzlib/zip.c
    ! minor changes on recent extensions when members in skletons array
      are not character type.
      Ex: HB_ZIPFILE("my.zip",{"*.prg",NIL},,,,,,,,{NIL,"*.dll"}) caused GPF.

2004-02-28 23:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    - Removed no longer needed logic in PrevSquare();

  * source/vm/arrays.c
    ! Fixed support of Char Subtype (numeric context) in hb_arrayScan()

2004-02-29 10:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/hbzlib/zip.c
    + add additional parameter to not include certain files in created zip.

    /*
    Example:
    HB_ZIPFILE( "my.zip","*.*",,,,,,,,"*.exe")
    (zip all files excluding those match *.exe skleton)

    HB_ZIPFILE( "my.zip","*.*",,,,,,,,{"*.exe","*.dll"})
    (zip all files excluding those match *.exe and *.dll skletons)
